--- a/404.md
+++ b/404.md
@@ -1,6 +1,7 @@
 ---
 title: Page not found
 layout: post_old
+permalink: /404.html
 footer: Page not found! :(<br><a href="/">Return to home.</a>
 style: "#alert{font-size: 150px;} #content{padding-top: 75px;box-sizing: border-box;}"
 ---
